fixing issue with animation resulting in x overflow on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,6 +263,7 @@ body #scrolltotop:hover {
     width: 100%;
     flex-direction: column;
     min-height: 80vh;
+    overflow-x: hidden;
   }
 }
 .main-content h2 {
