--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -72,6 +72,7 @@ body {
       width:100%;
       flex-direction:column;
       min-height: 80vh;
+      overflow-x: hidden;
     }
     margin: -3vw auto -7vw auto;
     box-shadow: 0 0 1vw white;
